--- a/sus.css
+++ b/sus.css
@@ -24,11 +24,11 @@ body{
 .main_container{
     background-color: #000000;
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
 }
 .main_wrapper{
     display: flex;
-    height: 100%;
+    height: calc(100% - 77.8px);
     width: 100%;
 }
 .left_container{
@@ -493,6 +493,335 @@ button:last-child {
     width: 100%;
     border-radius: 6px;
 }
+.big-card-overlay{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(31, 223, 100);
+    color: #000;
+    box-shadow: 0px 2px 3px #464545;
+    position: absolute;
+    top:70%;
+    right: 4%;
+    height: 46px;
+    width: 46px;
+    font-size: 28px;
+    opacity: 0;
+    border-radius: 50%;
+    padding-left: 3%;
+    transition: all .2s ease;
+}
+
+.big-card-overlay:hover{
+    background-color: rgb(32, 230, 104);
+    scale: 1.05;
+}
+
+.big-card-overlay:active{
+    background-color: rgb(23, 187, 83);
+    scale: 1.02;
+}
+
+
+.big_card:hover  .big-card-overlay{
+    opacity: 1;
+    top:66%;
+}
+
+.fa-pause,.fa-play{
+    font-size: 80%;
+}
+
+.fa-pause{
+   display: none;
+   margin-left: -11%;
+}
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    height: 77.8px;
+    width: 100%;
+    padding: 10px 20px;
+    color: #ffffff;
+}
+
+footer > *{
+    flex: 1;
+}
+
+.currently-playing-title{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex:1;
+    padding: 0 5px;
+}
+
+.currently-playing-title > img{
+    height: 50px;
+    border-radius: 4px;
+}
+
+
+.currently-playing-title > i{
+    cursor: pointer;
+    font-size: 22px;
+}
+
+.liked{
+    color: firebrick;
+    scale: 1.2;
+}
+
+.title-info{
+    height: 100%;
+    display: flex;
+    padding: 5px;
+    flex-direction: column;
+}
+
+.title-info > h3{
+    text-wrap: balance;
+    font-size: clamp(11.5px,1.3vw,20px);
+}
+
+.title-info > p{
+    color: #bdbdbd;
+    font-size: clamp(9px,1.2vw,14px);
+    flex-wrap: nowrap;
+}
+
+.playback{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 3;
+    /* background-color: red; */
+    margin: 0 30px;
+    gap: 3px;
+    padding: 6px 0;
+}
+
+.playback > .playback-buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    gap: 30px;
+    font-size: 18px;
+    color: white;
+}
+
+.playback-buttons > *{
+    cursor: pointer;
+}
+
+.fa-shuffle{
+    opacity: .2;
+    cursor: auto;
+}
+
+.fa-backward-step:active,.fa-forward-step:active{
+    color: #1DB954;
+}
+
+.fa-backward:is(:hover),.fa-forward:is(:hover){
+    color: #1DB954;
+}
+
+.fa-backward:is(:active),.fa-forward:is(:active){
+    color: #16813b;
+}
+
+.playback-buttons > *{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.play-pause{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#play{
+    font-size: 40px;
+}
+
+#play:hover{
+   color: #1DB954;
+}
+
+#pause{
+    display: none;
+    font-size: 40px;
+    color: #1DB954;
+}
+
+.fa-repeat:hover{
+    color: #1db954;
+}
+
+.looping{
+    color: #1DB954;
+}
+
+.playback > .timeline{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    /* background-color: red; */
+    width: 73%;
+}
+
+.song-progress__div{
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 4px;
+    border-radius: 20px;
+    /* background-color: rebeccapurple; */
+}
+input[type=range]{
+    -webkit-appearance: none;
+    cursor: pointer;
+    appearance: none;
+    width: 100%;
+    background: transparent;
+  }
+
+  /* #song-progress::-webkit-slider-thumb{
+    -webkit-appearance: none;
+  }
+input[type=range]:focus{
+    outline: none;
+ } */
+  
+ input[type=range]::-ms-track {
+    /* width: 100%; */
+    /* cursor: pointer; */
+    background: transparent; 
+    border-color: transparent;
+    color: transparent;
+  }
+
+  /* input[type=range]::-webkit-slider-thumb{
+    position: relative;
+    z-index: 2;
+-webkit-appearance: none;
+border: 1px solid #ffffff;
+box-shadow: 0 0 30px 1px rgb(0, 0, 0);
+height: 12px;
+width: 12px;
+margin-top: -4px;
+border-radius: 50%;
+background-color: #ffffff;
+cursor: pointer;
+} */
+
+
+progress{
+    position: absolute;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    appearance: none;
+    -webkit-appearance: none;
+    pointer-events: none;
+}
+
+input:hover ~ ::-webkit-progress-value {
+    background-color: #1DB954;
+}
+
+
+progress::-webkit-progress-bar{
+    background-color: #3D3D3D;
+}
+
+/* progress::-webkit-progress-inner-element{
+    background-color: black;
+    border-radius: 100px;
+} */
+
+progress::-webkit-progress-value{
+    background-color: #cccccc;
+    border-radius: 10px;
+}
+
+.controls{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 20px;
+    gap: 10px;
+}
+
+.controls > * { 
+    color: white;
+}
+
+.volume-control{
+    display: flex;
+    gap: 4px;
+}
+
+.volume-control > svg{
+    height: 16px;
+    width: 16px;
+    fill: #fff;
+}
+
+.volume-mute,.volume-low,.volume-high{
+    display: none;
+}
+
+.controls input{
+    width: 100%;
+}
+
+.volume-progress__div{
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
+    position: relative;
+    height: 4px;
+    /* display: flex; */
+}
+
+
+.small-screen-message{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(#1e0f44,#1e0f44, #181818);
+    z-index: 10;
+    padding: 0 20px;
+    color: rgba(255, 255, 255, 0.89);
+}
+
+.small-screen-message > h2{
+    text-align: center;
+    text-wrap:balance;
+    font-size: clamp(14px,4vw,40px);
+}
+
 
 @media all and (max-width:1302px){
     .card{
